fixed https://trello.com/c/lLciU72N/44-lines-not-aligned-properly-on-mobile https://trello.com/c/xWaYqdlg/43-lines-not-aligned-properly-on-pc https://trello.com/c/DWe7so05/45-weight-is-still-a-range-it-should-be-an-integer-drop-down-or-text-entry

--- a/style.css
+++ b/style.css
@@ -340,6 +340,11 @@ option:not(:first-of-type) {
     margin-left: -35px;
   } */
 
+  .yearField{
+    margin-left: 7px;
+  }
+
+
 }
 
 
@@ -431,12 +436,14 @@ option:not(:first-of-type) {
     margin-left: 0px;
   }
 
+
 }
 
 @media only screen and (max-width: 576px){
 
   .container{
     padding: 0 2%;
+    margin-left: 2px;;
    
   }
 
